# KernelBench

./: .gitignore  EVAL.md  README.md  pyproject.toml  requirements.txt
notebooks/: tutorial.ipynb
results/timing/L40S_modal/: baseline_time_torch.json
results/timing/L4_GCP/: baseline_time_torch.json  baseline_time_torch_compile_inductor_default.json  baseline_time_torch_compile_inductor_max-autotune-no-cudagraphs.json  baseline_time_torch_compile_inductor_max-autotune.json  baseline_time_torch_compile_inductor_reduce-overhead.json
scripts/: benchmark_eval_analysis.py  eval_from_generations.py  generate_and_eval_single_sample.py  generate_and_eval_single_sample_modal.py  generate_baseline_time.py  generate_baseline_time_modal.py  generate_samples.py  get_baseline_time_single_problem.py  inspect_baseline.py  inspect_triton.py  run_and_check.py  verify_generation.py
src/: eval.py  prompt_constructor_toml.py  timing.py
src/kernelbench/: dataset.py  eval.py  frameworks.py  prompt_constructor_toml.py  timing.py  utils.py
src/kernelbench/prompts/: prompts.toml
src/kernelbench/unit_tests/: test_dataset.py  test_eval_timing.py
src/unit_tests/: test_eval_adversarial.py  test_eval_timing.py
